# llm-hallucination-eval

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/llm_eval/: __init__.py  __main__.py  _main.py  args.py  data.py  evaluate.py  generate.py  main.py  reward.py  utils.py
