[tool.poetry]
name = "llm-hallucination-eval"
version = "0.1.0"
description = "Hallucination evaluation pipeline for LLMs"

authors = ["Yurts AI <https://yurts.ai>"]
maintainers = [
  "Guruprasad Raghavan <guru@yurts.ai>",
  "Victor I. Afolabi <victor.afolabi.ctr@yurts.ai>"
]

readme = "README.md"
repository = "https://github.com/YurtsAI/llm-hallucination-eval"
keywords = ["llm", "transformers", "language-models", "hallucination", "evaluation"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

packages = [
  {include = "llm_eval", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.30.2"
datasets = "^2.13.1"
accelerate = "^0.20.3"
torch = "^2.0.1"
jsonlines = "^3.1.0"
tqdm = "^4.65.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
pydocstyle = {version = "^6.3.0", extras = ["tomli"]}
docformatter = {version = "^1.7.3", extras = ["tomli"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
recursive = true
# in-place = true
diff = true
aggressive = 3
max-line-length = 120

[tool.docformatter]
in-place = true
recursive = true
blank = true
close-quotes-on-newline = true

[tool.pydocstyle]
convention = "google"
add_ignore = [
  # Missing docstring in public module.
  "D100",
  # Missing docstring in public class.
  "D101",
  # Missing docstring in public package.
  "D104",
  # Missing docstring in magic method.
  "D105",
  # Missing docstring in __init__.
  "D107",
  # No blank lines allowed after function docstring.
  "D202",
  # 1 blank line required between summary line and description.
  "D205",
  # First line should end with a period, question mark, or exclamation point.
  "D415",
  # No blank lines allowed between a section header and its content.
  "D412",
  # Missing argument descriptions in the docstring.
  "D417",
]

[tool.mypy]
files = [
  "src/",
]
exclude = [
  "tests",
  ".venv",
  "venv",
]
namespace_packages = true
explicit_package_bases = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_incomplete_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
allow_untyped_calls = true
# show_error_content = true
warn_unused_configs = true
warn_unused_ignores = true
# warn_redundant_cast = true
warn_return_any = false
warn_unreachable = true
disallow_subclassing_any = false
disallow_untyped_decorators = false

[tool.pyright]
reportOptionalCall = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportUnboundVariable = "none"
